[gd_scene load_steps=4 format=3 uid="uid://btxk60por2vh8"]

[ext_resource type="Script" path="res://scripts/ui/settings_menu.gd" id="1_eenhc"]
[ext_resource type="Texture2D" uid="uid://bidl06v5fr0ip" path="res://assets/game/background.jpg" id="1_lmlir"]
[ext_resource type="AudioStream" uid="uid://bgmaul6bxxttl" path="res://assets/audio/sfx/shot.wav" id="4_c5il0"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eenhc")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_lmlir")

[node name="TitleLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -233.0
offset_top = 134.0
offset_right = 273.0
offset_bottom = 222.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 96
bbcode_enabled = true
text = "SETTINGS_TITLE"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false

[node name="VolumeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -64.0
offset_right = 96.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "SETTINGS_VOLUME"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -66.0
offset_top = -166.0
offset_right = 46.0
offset_bottom = -124.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "SETTINGS_BACK"

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_c5il0")
bus = &"SFX"

[node name="MusicVolumeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -242.0
offset_top = 5.0
offset_right = 43.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "SETTINGS_MUSIC"

[node name="MusicSlider" type="HSlider" parent="."]
custom_minimum_size = Vector2(163, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 74.0
offset_top = 11.0
offset_right = 237.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
min_value = -72.0
max_value = 6.0

[node name="SFXVolumeLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 343.0
offset_top = 375.0
offset_right = 589.0
offset_bottom = 408.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "SETTINGS_SFX"

[node name="SFXSlider" type="HSlider" parent="."]
custom_minimum_size = Vector2(163, 50)
layout_mode = 2
offset_left = 650.0
offset_top = 363.0
offset_right = 813.0
offset_bottom = 413.0
grow_horizontal = 2
grow_vertical = 2
min_value = -72.0
max_value = 6.0

[connection signal="open" from="." to="." method="_on_settings_menu_open"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="drag_ended" from="SFXSlider" to="." method="_on_sfx_slider_drag_ended"]
[connection signal="value_changed" from="SFXSlider" to="." method="_on_sfx_slider_value_changed"]
